src/objects/Account_Plan_Team__c.object
<CustomObject>
    <description>R5 - Account Plan Team</description>
    <fields>
        <fullName>Account_Plan_Owner__c</fullName>
        <formula>CASESAFEID(Account_Plan__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access__c</fullName>
        <description>R5 - Access</description>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read only</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R5 - Master Detail Relationship to Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Team</relationshipLabel>
        <relationshipName>Account_Plan_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5-Country</description>
        <formula>LEFT(TEXT(User__r.Business_Unit_BU__c), 4)</formula>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5-Country</description>
        <formula>User__r.Country</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R5 - Team Role</description>
        <inlineHelpText>Select the role that most closely describes your role on the virtual Account Team. The Role is not linked to any authorization model in Salesforce.com</inlineHelpText>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Sales Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plan_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Plan Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>User__c</columns>
        <columns>Team_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AccPlanTeam-{0000}</displayFormat>
        <label>Account Plan Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 If Account Plan Status is Closed the user should not edit the Account Plan team</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>